Making some changes based on suggestions from Android Lint